fix rest naming
