# code/pprice-infrastructure/src/main/java/com/pprice/infrastructure/components/primary/rest/ProductRestAdapter.java
@@ -6,7 +6,7 @@ import java.time.OffsetDateTime;
 import com.pprice.application.usecases.prices.GetProductPrice;
 import com.pprice.application.usecases.prices.params.GetProductPriceParams;
 import com.pprice.components.rest.ProductRestPort;
-import com.pprice.components.rest.dtos.ProductPriceDTO;
+import com.pprice.components.rest.dtos.ProductPriceRestDTO;
 import com.pprice.domain.entity.Product;
 import com.pprice.domain.entity.ProductPrice;
 import com.pprice.infrastructure.components.mappers.rest.InstantRestMapper;
@@ -25,7 +25,7 @@ public class ProductRestAdapter implements ProductRestPort {
   private final ProductPriceRestMapper productPriceRestMapper;
 
   @Override
-  public ProductPriceDTO onGetProductPrice(
+  public ProductPriceRestDTO onGetProductPrice(
       Integer brandIdRestDto,
       Integer productIdRestDto,
       OffsetDateTime dateRestDto) {
